# Habitify_deprecated

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bef.txt
Habitify/: CMakeLists.txt
Habitify/src/: Application.h
Habitify/src/utils/: DataTypes.h
HabitifyApplication/: CMakeLists.txt
HabitifyServer/: CMakeLists.txt
HabitifyServer/src/: Server.cpp  Server.h  main.cpp
client/: CMakeLists.txt
client/src/: Application.cpp  Application.h  Board.cpp  Board.h  Checklist.cpp  Checklist.h  NodeHandler.cpp  NodeHandler.h
client/src/utils/: DataTypes.h  Layer.h  Node.cpp  Node.h  PingDemo.h
cmake/: common.cmake  costum-config.cmake
server/: CMakeLists.txt
server/src/: NodeHandler.cpp  NodeHandler.h  Server.cpp  Server.h  main.cpp
src/: Application.cpp  Application.h  Board.cpp  Board.h  Checklist.cpp  Checklist.h  main.cpp
src/utils/: DataTypes.h  LayerStack.cpp  LayerStack.h  Node.cpp  Node.h
utils/: CMakeLists.txt  Habitify_protocol.grpc.pb.cc  Habitify_protocol.grpc.pb.h  Habitify_protocol.pb.cc  Habitify_protocol.pb.h  Habitify_protocol.proto  NodeWrapper.h  NodeWrapperUpdated.h
